--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
       "require": "./dist/index.umd.js"
     }
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/olton/animation.git"
+  },
   "funding": [
     {
       "type": "paypal",
