--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@olton/animation",
-  "description": "Animation library (Vite, JavaScript)",
+  "description": "Animation library (JavaScript)",
   "private": false,
-  "version": "0.1.1",
+  "version": "0.2.0",
   "license": "MIT",
   "author": "Serhii Pimenov <serhii@pimenov.com.ua> (https://pimenov.com.ua)",
   "type": "module",
@@ -17,15 +17,8 @@
   "files": [
     "dist"
   ],
-  "main": "./dist/index.umd.js",
-  "module": "./dist/index.es.js",
-  "types": "./dist/index.d.ts",
-  "exports": {
-    ".": {
-      "import": "./dist/index.es.js",
-      "require": "./dist/index.umd.js"
-    }
-  },
+  "main": "./dist/animation.cjs.js",
+  "module": "./dist/animation.es.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/olton/animation.git"
@@ -45,21 +38,16 @@
     }
   ],
   "scripts": {
-    "dev": "vite",
-    "build": "npm run clear && vite build && rollup --config",
-    "start": "vite serve demo",
-    "pub": "npm run build && npm version patch && npm publish --access public",
+    "build": "npm run clear && cross-env MODE=production rollup -c",
+    "dev": "npm run clear && cross-env MODE=development rollup -c",
+    "pub": "npm publish --access public",
     "clear": "shx rm -rf lib/* dist/*"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "path": "^0.12.7",
     "shx": "^0.3.4",
-    "vite": "^4.1.0"
-  },
-  "dependencies": {
-    "@rollup/plugin-commonjs": "^24.0.1",
-    "@rollup/plugin-node-resolve": "^15.0.1",
-    "glob": "^8.1.0",
+    "glob": "^10.3.12",
     "rollup-plugin-terser": "^7.0.2"
   }
 }
