--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@olton/animation",
   "description": "Animation library (JavaScript)",
   "private": false,
-  "version": "0.2.0",
+  "version": "0.3.0",
   "license": "MIT",
   "author": "Serhii Pimenov <serhii@pimenov.com.ua> (https://pimenov.com.ua)",
   "type": "module",
@@ -39,7 +39,7 @@
   ],
   "scripts": {
     "build": "npm run clear && cross-env MODE=production rollup -c",
-    "dev": "npm run clear && cross-env MODE=development rollup -c",
+    "dev": "cross-env MODE=development rollup -c",
     "pub": "npm publish --access public",
     "clear": "shx rm -rf lib/* dist/*"
   },
