--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@olton/animation",
   "description": "Animation library (JavaScript)",
   "private": false,
-  "version": "0.3.0",
+  "version": "0.4.0",
   "license": "MIT",
   "author": "Serhii Pimenov <serhii@pimenov.com.ua> (https://pimenov.com.ua)",
   "type": "module",
@@ -17,8 +17,8 @@
   "files": [
     "dist"
   ],
-  "main": "./dist/animation.cjs.js",
-  "module": "./dist/animation.es.js",
+  "main": "./dist/animation.cjs",
+  "module": "./dist/animation.mjs",
   "repository": {
     "type": "git",
     "url": "https://github.com/olton/animation.git"
@@ -47,7 +47,7 @@
     "cross-env": "^7.0.3",
     "path": "^0.12.7",
     "shx": "^0.3.4",
-    "glob": "^10.3.12",
+    "glob": "^11.0.0",
     "rollup-plugin-terser": "^7.0.2"
   }
 }
